@@ -1,5 +1,13 @@
 2008-12-05  Michael Wiegand <michael.wiegand@intevation.de>
 
+	* openvasd/processes.c (create_process): Ignore warning about srand48
+	not being random enough; it is random enough for our purposes.
+
+	* openvasd/pluginload.c (files_init, files_close): Ignore warnings
+	about srand not being random enough; see above.
+
+2008-12-05  Michael Wiegand <michael.wiegand@intevation.de>
+
 	* openvasd/comm.c (send_plug_info): Fixed insufficient memory
 	allocation which could have caused a buffer overflow when trying to
 	assemble the plugin_info string for NVTs with long CVEs, BIDs, XRefs
